[package]
name = "reqwest-oauth1"
version = "0.1.0"
authors = ["Karno <karnoroid@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Add OAuth1 signature to reqwest with oauth1-request."
repository = "https://github.com/karno/reqwest-oauth1"
readme = "README.md"
keywords = ["oauth", "reqwest", "request", "http"]
categories = ["web-programming::http-client", "authentication"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
oauth1-request = "0.3.2"
reqwest = "0.10.8"
serde = "1.0.116"
serde_urlencoded = "0.6.1"
url = "2.1.1"
async-trait = "0.1.40"
thiserror = "1.0.20"

[dev-dependencies]
percent-encoding = "2.1.0"
tokio = { version = "0.2.22", features = ["full"] }
